Navbar responsive fix and scroll collapse

--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@ html {
     height: 100%;
 }
 
-@media(min-width:1000px) {
+@media(min-width: 767px) {
     .navbar {
-        padding: 20px 0;
+        padding: 15px 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
